fix alignments

--- a/wp-content/themes/bunko/src/css/_alignment.css
+++ b/wp-content/themes/bunko/src/css/_alignment.css
@@ -28,16 +28,17 @@
 /* Wide */
 .wp-block[data-align="wide"],
 .alignwide {
-	--margin-horizontal: max(calc( 50% - var(--content-wide-width) / 2 ), calc(50% - 50vw));
-	max-width: 100vw;
+	--max-width: min( 100vw, var(--content-wide-width) );
+	--margin-horizontal: calc( 50% - var(--max-width) / 2 );
+	max-width: var(--max-width);
 	position: relative;
 	margin-left: var(--margin-horizontal);
 	margin-right: var(--margin-horizontal);
-	width: var(--content-wide-width);
+	width: var(--max-width);
 }
 
 [class*="__inner-container"] > .alignwide {
-	width: 100%;
+	max-width: 100%;
 }
 
 /* Center */
