--- a/wp-content/themes/bunko/src/css/_variables.css
+++ b/wp-content/themes/bunko/src/css/_variables.css
@@ -3,10 +3,10 @@
 @custom-media --window-large (min-width: 1080px);
 
 :root {
-	--wp--preset--font-size--normal: 16px;
+	--wp--preset--font-size--normal: 16;
 	--color-white: #fff;
 	--color-black: #333;
-	--content-width: 1000px;
-	--content-wide-width: 1200px;
+	--content-width: 75rem;
+	--content-wide-width: 100rem;
 	--content-gutter: 2rem;
 }
